--- a/kalendar-objava.html
+++ b/kalendar-objava.html
@@ -81,7 +81,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-XLPVBEXTF4');
+  // default: analytics off until consent
+  gtag('consent', 'default', { analytics_storage: 'denied' });
+  gtag('config', 'G-XLPVBEXTF4', { anonymize_ip: true });
 </script>
 
 
@@ -945,22 +947,47 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </section>
 
 </main> <!-- /main -->
-<div class="cs-footer">
-  <div class="cs-footer-left">
-    © Leonarda Srdelić, 2025
-  </div>
-  <div class="cs-footer-links">
-    <a href="https://example.com/cookies" target="_blank" rel="noreferrer">Cookies policy</a>
-    <span class="cs-sep">|</span>
-    <a href="https://example.com/privacy" target="_blank" rel="noreferrer">Privacy policy</a>
-    <span class="cs-sep">|</span>
-    <a href="https://example.com/legal" target="_blank" rel="noreferrer">Legal notice</a>
-  </div>
-  <div class="cs-footer-feedback">
-    <a href="mailto:leonardasrdelic@windowslive.com">
-      <span class="cs-mail">✉️</span> Feedback
-    </a>
-  </div>
+<div id="cookie-banner" style="position: fixed; bottom: 0; width: 100%; background: #f5f5f5; padding: 15px; font-size: 0.9em; border-top: 1px solid #ccc; z-index: 1000; box-shadow: 0 -2px 6px rgba(0,0,0,0.05); display: none;">
+  <span>
+    Ova stranica koristi nužne i analitičke kolačiće (Google Analytics) radi funkcionalnosti i analize posjećenosti.
+  </span>
+  <button onclick="acceptCookies()" style="margin-left: 10px;">
+    Prihvaćam
+  </button>
+  <a href="./policy.html" style="margin-left: 10px;">
+    Više informacija
+  </a>
+</div>
+<script>
+  (function () {
+    const key = 'cs-cookie-consent';
+    const banner = document.getElementById('cookie-banner');
+    if (!banner) return;
+    if (localStorage.getItem(key) === 'accepted') {
+      banner.style.display = 'none';
+      if (typeof gtag === 'function') {
+        gtag('consent', 'update', { analytics_storage: 'granted' });
+      }
+      return;
+    }
+    banner.style.display = 'block';
+    window.acceptCookies = function () {
+      localStorage.setItem(key, 'accepted');
+      if (typeof gtag === 'function') {
+        gtag('consent', 'update', { analytics_storage: 'granted' });
+      }
+      banner.style.display = 'none';
+    };
+  })();
+</script>
+<div class="cs-footer" style="font-size: 0.85em; color: #555; margin-top: 60px;">
+  <p>
+    © Leonarda Srdelić | Poslovna rješenja, obrt za poslovno savjetovanje i ostale usluge
+  </p>
+  <p>
+    <a href="./policy.html">Kolačići i privatnost</a> |
+    <a href="./policy.html#legal">Pravne napomene</a>
+  </p>
 </div>
 <script id="quarto-html-after-body" type="application/javascript">
   window.document.addEventListener("DOMContentLoaded", function (event) {
