--- a/policy.html
+++ b/policy.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Klimatski makro pokazatelji – HR CroStat Dash</title>
+<title>Kolačići, privatnost i pravne napomene – HR CroStat Dash</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -85,13 +85,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   gtag('consent', 'default', { analytics_storage: 'denied' });
   gtag('config', 'G-XLPVBEXTF4', { anonymize_ip: true });
 </script>
-<meta http-equiv="refresh" content="0; url=/premium/">
 
 
 <link rel="stylesheet" href="styles/eurostat-responsive.css">
 </head>
 
-<body class="nav-fixed quarto-light">
+<body class="nav-fixed fullcontent quarto-light">
 
 <div id="quarto-search-results"></div>
   <header id="quarto-header" class="headroom fixed-top">
@@ -258,9 +257,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
 <!-- sidebar -->
 <!-- margin-sidebar -->
-    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar zindex-bottom">
-        
-    </div>
+    
 <!-- main -->
 <main class="content" id="quarto-document-content">
 <!-- Google Tag Manager (noscript) -->
@@ -269,7 +266,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Klimatski makro pokazatelji</h1>
+<h1 class="title">Kolačići, privatnost i pravne napomene</h1>
 </div>
 
 
@@ -286,11 +283,52 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </header>
 
 
-<blockquote class="blockquote">
-<p>Radni nacrt.</p>
-</blockquote>
+<section id="kolačići-i-privatnost" class="level2">
+<h2 class="anchored" data-anchor-id="kolačići-i-privatnost">Kolačići i privatnost</h2>
+<section id="voditelj-obrade" class="level3">
+<h3 class="anchored" data-anchor-id="voditelj-obrade">Voditelj obrade</h3>
+<p>Leonarda Srdelić<br>
+Poslovna rješenja, obrt za poslovno savjetovanje i ostale usluge<br>
+Hrvatska</p>
+</section>
+<section id="politika-kolačića" class="level3">
+<h3 class="anchored" data-anchor-id="politika-kolačića">Politika kolačića</h3>
+<p>Internetska stranica cro-stat.com koristi nužne i analitičke kolačiće radi tehničke funkcionalnosti i analize posjećenosti.</p>
+<p><strong>Nužni kolačići</strong><br>
+Omogućuju osnovno funkcioniranje stranice.</p>
+<p><strong>Analitički kolačići</strong><br>
+Stranica koristi Google Analytics za prikupljanje agregiranih statističkih podataka.<br>
+IP adrese korisnika anonimiziraju se prije obrade.<br>
+Podaci se mogu prenositi na poslužitelje izvan EU uz primjenu standardnih ugovornih klauzula.</p>
+</section>
+<section id="politika-privatnosti" class="level3">
+<h3 class="anchored" data-anchor-id="politika-privatnosti">Politika privatnosti</h3>
+<ul>
+<li>Stranica ne prikuplja osobne podatke koji omogućuju izravnu identifikaciju korisnika.<br>
+</li>
+<li>Automatski se obrađuju tehnički podaci u statističke i sigurnosne svrhe.<br>
+</li>
+<li>Pravna osnova obrade je privola korisnika za analitičke kolačiće i legitimni interes za nužne kolačiće.<br>
+</li>
+<li>Korisnici imaju pravo na pristup, brisanje, ograničenje obrade i prigovor u skladu s GDPR-om.</li>
+</ul>
+<p><a id="legal"></a></p>
+</section>
+</section>
+<section id="pravne-napomene" class="level2">
+<h2 class="anchored" data-anchor-id="pravne-napomene">Pravne napomene</h2>
+<ul>
+<li>Sadržaj stranice ima isključivo informativni i analitički karakter.<br>
+</li>
+<li>Ne predstavlja financijski, investicijski niti pravni savjet.<br>
+</li>
+<li>Vlasnik stranice ne odgovara za odluke donesene na temelju prikazanih podataka.<br>
+</li>
+<li>Sav sadržaj zaštićen je autorskim pravom.</li>
+</ul>
 
 
+</section>
 
 </main> <!-- /main -->
 <div id="cookie-banner" style="position: fixed; bottom: 0; width: 100%; background: #f5f5f5; padding: 15px; font-size: 0.9em; border-top: 1px solid #ccc; z-index: 1000; box-shadow: 0 -2px 6px rgba(0,0,0,0.05); display: none;">
