--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Monitor – HR CroStat Dash</title>
+<title>Monitor – CroStat</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -30,6 +30,7 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/quarto-search/fuse.min.js"></script>
 <script src="site_libs/quarto-search/quarto-search.js"></script>
 <meta name="quarto:offset" content="./">
+<link href="./styles/crostat-logo-small.png" rel="icon" type="image/png">
 <script src="site_libs/quarto-html/quarto.js" type="module"></script>
 <script src="site_libs/quarto-html/tabsets/tabsets.js" type="module"></script>
 <script src="site_libs/quarto-html/axe/axe-check.js" type="module"></script>
@@ -109,8 +110,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <nav class="navbar navbar-expand-lg " data-bs-theme="dark">
       <div class="navbar-container container-fluid">
       <div class="navbar-brand-container mx-auto">
+    <a href="./index.html" class="navbar-brand navbar-brand-logo">
+    <img src="./styles/crostat-logo.png" alt="" class="navbar-logo light-content">
+    <img src="./styles/crostat-logo.png" alt="" class="navbar-logo dark-content">
+    </a>
     <a class="navbar-brand" href="./index.html">
-    <span class="navbar-title">HR CroStat Dash</span>
+    <span class="navbar-title">CroStat</span>
     </a>
   </div>
             <div id="quarto-search" class="" title="Search"></div>
@@ -311,8 +316,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </div>
 </div>
 <div>
-<div class="echarts4r html-widget html-fill-item" id="htmlwidget-24b93a5863dd31178014" style="width:100%;height:500px;"></div>
-<script type="application/json" data-for="htmlwidget-24b93a5863dd31178014">{"x":{"theme":"","tl":false,"draw":true,"renderer":"canvas","events":[],"buttons":[],"opts":{"yAxis":[{"show":true,"name":"","nameLocation":"middle","nameGap":30,"nameRotate":0,"axisLabel":{"formatter":"function(x){return x.toFixed(0).replace('.', ',');}"}}],"xAxis":[{"data":["2019-Q1","2019-Q2","2019-Q3","2019-Q4","2020-Q1","2020-Q2","2020-Q3","2020-Q4","2021-Q1","2021-Q2","2021-Q3","2021-Q4","2022-Q1","2022-Q2","2022-Q3","2022-Q4","2023-Q1","2023-Q2","2023-Q3","2023-Q4","2024-Q1","2024-Q2","2024-Q3","2024-Q4","2025-Q1","2025-Q2","2025-Q3"],"type":"category","boundaryGap":true,"axisLabel":{"interval":0,"rotate":65,"margin":10},"axisTick":{"alignWithLabel":true}}],"legend":{"data":["Hrvatska"],"show":false,"type":"plain"},"series":[{"data":[{"value":["2019-Q1","  1.99105926"]},{"value":["2019-Q2","  0.53700768"]},{"value":["2019-Q3"," -0.18551872"]},{"value":["2019-Q4"," -0.36708047"]},{"value":["2020-Q1"," -1.42009903"]},{"value":["2020-Q2","-13.92458960"]},{"value":["2020-Q3","  5.14720701"]},{"value":["2020-Q4","  8.15960274"]},{"value":["2021-Q1","  5.78005815"]},{"value":["2021-Q2"," -0.51626855"]},{"value":["2021-Q3","  1.96633729"]},{"value":["2021-Q4","  3.21653230"]},{"value":["2022-Q1","  3.02393402"]},{"value":["2022-Q2","  0.89650645"]},{"value":["2022-Q3","  0.80038620"]},{"value":["2022-Q4"," -1.02099601"]},{"value":["2023-Q1","  1.95436313"]},{"value":["2023-Q2","  1.90108053"]},{"value":["2023-Q3","  0.00539975"]},{"value":["2023-Q4","  1.83716582"]},{"value":["2024-Q1","  0.34131955"]},{"value":["2024-Q2","  1.10832232"]},{"value":["2024-Q3","  0.99687741"]},{"value":["2024-Q4","  0.99609324"]},{"value":["2025-Q1","  0.38105851"]},{"value":["2025-Q2","  0.89894666"]},{"value":["2025-Q3","  0.27442649"]}],"yAxisIndex":0,"xAxisIndex":0,"name":"Hrvatska","type":"line","coordinateSystem":"cartesian2d","symbol":"circle","showSymbol":true,"lineStyle":{"width":3,"color":"#C00000"},"itemStyle":{"color":"#C00000"},"emphasis":{"itemStyle":{"color":"#C00000"}},"markLine":{"lineStyle":{"color":"grey70","type":"dashed"},"label":{"show":false},"symbol":"none","data":[{"yAxis":0}]}}],"grid":[{"top":10,"bottom":80,"left":40,"right":20}],"dataZoom":[{"type":"slider","startValue":8,"endValue":26,"height":14,"bottom":22},{"type":"inside","startValue":8,"endValue":26}],"toolbox":{"feature":{"dataZoom":[]}},"tooltip":{"trigger":"axis","axisPointer":{"type":"line"},"formatter":"\n        function(params){\n          if (!params || !params.length) {\n            return '';\n          }\n          var p = params[0];\n          var raw = Array.isArray(p.value) ? p.value[p.value.length - 1] : p.value;\n          if (raw === null || raw === undefined || isNaN(raw)) {\n            return '';\n          }\n          var val = Number(raw).toFixed(1).replace('.', ',');\n          return p.name + ': ' + val + ' %';\n        }\n      "}},"dispose":true},"evals":["opts.yAxis.0.axisLabel.formatter","opts.tooltip.formatter"],"jsHooks":[]}</script>
+<div class="echarts4r html-widget html-fill-item" id="htmlwidget-79cb3f8397fb5005cf38" style="width:100%;height:500px;"></div>
+<script type="application/json" data-for="htmlwidget-79cb3f8397fb5005cf38">{"x":{"theme":"","tl":false,"draw":true,"renderer":"canvas","events":[],"buttons":[],"opts":{"yAxis":[{"show":true,"name":"","nameLocation":"middle","nameGap":30,"nameRotate":0,"axisLabel":{"formatter":"function(x){return x.toFixed(0).replace('.', ',');}"}}],"xAxis":[{"data":["2019-Q1","2019-Q2","2019-Q3","2019-Q4","2020-Q1","2020-Q2","2020-Q3","2020-Q4","2021-Q1","2021-Q2","2021-Q3","2021-Q4","2022-Q1","2022-Q2","2022-Q3","2022-Q4","2023-Q1","2023-Q2","2023-Q3","2023-Q4","2024-Q1","2024-Q2","2024-Q3","2024-Q4","2025-Q1","2025-Q2","2025-Q3"],"type":"category","boundaryGap":true,"axisLabel":{"interval":0,"rotate":65,"margin":10},"axisTick":{"alignWithLabel":true}}],"legend":{"data":["Hrvatska"],"show":false,"type":"plain"},"series":[{"data":[{"value":["2019-Q1","  1.99105926"]},{"value":["2019-Q2","  0.53700768"]},{"value":["2019-Q3"," -0.18551872"]},{"value":["2019-Q4"," -0.36708047"]},{"value":["2020-Q1"," -1.42009903"]},{"value":["2020-Q2","-13.92458960"]},{"value":["2020-Q3","  5.14720701"]},{"value":["2020-Q4","  8.15960274"]},{"value":["2021-Q1","  5.78005815"]},{"value":["2021-Q2"," -0.51626855"]},{"value":["2021-Q3","  1.96633729"]},{"value":["2021-Q4","  3.21653230"]},{"value":["2022-Q1","  3.02393402"]},{"value":["2022-Q2","  0.89650645"]},{"value":["2022-Q3","  0.80038620"]},{"value":["2022-Q4"," -1.02099601"]},{"value":["2023-Q1","  1.95436313"]},{"value":["2023-Q2","  1.90108053"]},{"value":["2023-Q3","  0.00539975"]},{"value":["2023-Q4","  1.83716582"]},{"value":["2024-Q1","  0.34131955"]},{"value":["2024-Q2","  1.10832232"]},{"value":["2024-Q3","  0.99687741"]},{"value":["2024-Q4","  0.99609324"]},{"value":["2025-Q1","  0.38105851"]},{"value":["2025-Q2","  0.89894666"]},{"value":["2025-Q3","  0.27442649"]}],"yAxisIndex":0,"xAxisIndex":0,"name":"Hrvatska","type":"line","coordinateSystem":"cartesian2d","symbol":"circle","showSymbol":true,"lineStyle":{"width":3,"color":"#C00000"},"itemStyle":{"color":"#C00000"},"emphasis":{"itemStyle":{"color":"#C00000"}},"markLine":{"lineStyle":{"color":"grey70","type":"dashed"},"label":{"show":false},"symbol":"none","data":[{"yAxis":0}]}}],"grid":[{"top":10,"bottom":80,"left":40,"right":20}],"dataZoom":[{"type":"slider","startValue":8,"endValue":26,"height":14,"bottom":22},{"type":"inside","startValue":8,"endValue":26}],"toolbox":{"feature":{"dataZoom":[]}},"tooltip":{"trigger":"axis","axisPointer":{"type":"line"},"formatter":"\n        function(params){\n          if (!params || !params.length) {\n            return '';\n          }\n          var p = params[0];\n          var raw = Array.isArray(p.value) ? p.value[p.value.length - 1] : p.value;\n          if (raw === null || raw === undefined || isNaN(raw)) {\n            return '';\n          }\n          var val = Number(raw).toFixed(1).replace('.', ',');\n          return p.name + ': ' + val + ' %';\n        }\n      "}},"dispose":true},"evals":["opts.yAxis.0.axisLabel.formatter","opts.tooltip.formatter"],"jsHooks":[]}</script>
 </div>
 </div>
 </div>
