Update footer copyright text (ASCII)

--- a/info.html
+++ b/info.html
@@ -400,7 +400,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </script>
 <div class="cs-footer" style="font-size: 0.85em; color: #555; margin-top: 60px;">
   <p>
-    © Leonarda Srdelić | Poslovna rješenja, obrt za poslovno savjetovanje i ostale usluge
+    © 2025 Leonarda Srdelic. Sva prava pridrzana.
   </p>
   <p>
     <a href="./policy.html">Kolačići i privatnost</a> |
