--- a/policy.html
+++ b/policy.html
@@ -371,7 +371,7 @@ Podaci se mogu prenositi na poslužitelje izvan EU uz primjenu standardnih ugovo
 </script>
 <div class="cs-footer" style="font-size: 0.85em; color: #555; margin-top: 60px;">
   <p>
-    © Leonarda Srdelić | Poslovna rješenja, obrt za poslovno savjetovanje i ostale usluge
+    © 2025 Leonarda Srdelic. Sva prava pridrzana.
   </p>
   <p>
     <a href="./policy.html">Kolačići i privatnost</a> |
