Publish latest render: narrower bar gaps on BDP

--- a/info.html
+++ b/info.html
@@ -399,13 +399,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   })();
 </script>
 <div class="cs-footer" style="font-size: 0.85em; color: #555; margin-top: 60px;">
-  <p>
+  <div class="cs-footer-left">
     © 2025 Leonarda Srdelic. Sva prava pridrzana.
-  </p>
-  <p>
-    <a href="./policy.html">Kolačići i privatnost</a> |
+  </div>
+  <div class="cs-footer-links">
+    <a href="./policy.html">Kolačići i privatnost</a>
+    <span class="cs-sep">|</span>
     <a href="./policy.html#legal">Pravne napomene</a>
-  </p>
+  </div>
+  <a class="cs-footer-feedback" href="mailto:leonardasrdelic@windowslive.com?subject=CroStat%20-%20Povratna%20informacija">
+    Pošalji povratnu informaciju
+  </a>
 </div>
 <script id="quarto-html-after-body" type="application/javascript">
   window.document.addEventListener("DOMContentLoaded", function (event) {
